Se modifica html y css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Hover</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
+
 <body>
     
-    
+    <div class="container">
+        <div class="card">
+            <div class="face face1">
+                <div class="content">
+                    <i class="fa-brands fa-windows"></i>
+                    <h3>Windows</h3>
+                </div>
+            </div>
+            <div class="face face2">
+                <div class="content">
+                    <p>Text Here....</p>
+                    <a href="#" type="button">Read More</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="face face1">
+                <div class="content">
+                    <i class="fa-brands fa-android"></i>
+                    <h3>Android</h3>
+                </div>
+            </div>
+            <div class="face face2">
+                <div class="content">
+                    <p>Text Here....</p>
+                    <a href="#" type="button">Read More</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="face face1">
+                <div class="content">
+                    <i class="fa-brands fa-apple"></i>
+                    <h3>Apple</h3>
+                </div>
+            </div>
+            <div class="face face2">
+                <div class="content">
+                    <p>Text Here....</p>
+                    <a href="#" type="button">Read More</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
